--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "predoc:build": "tsc",
     "doc:build": "docker build . -t patient",
     "doc:start": "docker run -it -p 8080:8080 patient",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/mocha/bin/mocha"
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +18,11 @@
     "hapi": "^18.1.0"
   },
   "devDependencies": {
-    "@types/hapi": "^18.0.5"
+    "@types/hapi": "^18.0.5",
+    "@types/mocha": "^8.2.2",
+    "@types/node": "^15.0.3",
+    "mocha": "^8.4.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.4"
   }
 }
