--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "csv-parse": "^4.15.4",
     "hapi": "^18.1.0"
   },
   "devDependencies": {
