--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "patient-api",
   "version": "1.0.0",
   "description": "",
-  "main": "bin/src/main.js",
+  "main": "bin/src/server.js",
   "directories": {
     "test": "test"
   },
@@ -10,19 +10,27 @@
     "predoc:build": "tsc",
     "doc:build": "docker build . -t patient",
     "doc:start": "docker run -it -p 8080:8080 patient",
-    "test": "./node_modules/mocha/bin/mocha"
+    "prestart": "tsc",
+    "start": "node ./bin/src/server.js",
+    "test": "./node_modules/mocha/bin/mocha --exit"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "csv-parse": "^4.15.4",
-    "hapi": "^18.1.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
-    "@types/hapi": "^18.0.5",
+    "@types/chai": "^4.2.18",
+    "@types/chai-http": "^4.2.0",
+    "@types/express": "^4.17.11",
     "@types/mocha": "^8.2.2",
     "@types/node": "^15.0.3",
+    "@types/supertest": "^2.0.11",
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
     "mocha": "^8.4.0",
+    "supertest": "^6.1.3",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.4"
   }
